--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "TypingMind MCP Connector for Render",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/mcp $MCP_AUTH_TOKEN"
+    "start": "npx @typingmind/mcp"
   },
   "dependencies": {
     "@typingmind/mcp": "latest"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
