--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "TypingMind MCP Connector for Render",
   "main": "index.js",
   "scripts": {
-    "start": "npx @typingmind/mcp"
+    "start": "npx @typingmind/mcp $AUTH_TOKEN"
   },
   "dependencies": {
     "@typingmind/mcp": "latest"
