--- a/package.json
+++ b/package.json
@@ -1,3 +1,15 @@
-"scripts": {
-  "start": "node server.js"
+{
+  "name": "typingmind-mcp-server",
+  "version": "1.0.0",
+  "description": "TypingMind MCP Connector for Render",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "@typingmind/mcp": "latest"
+  },
+  "engines": {
+    "node": ">=18"
+  }
 }
