--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "typingmind-mcp-server",
   "version": "1.0.0",
   "description": "TypingMind MCP Connector for Render",
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "npx @typingmind/mcp $AUTH_TOKEN"
   },
   "dependencies": {
     "@typingmind/mcp": "latest"
