--- a/fly.toml
+++ b/fly.toml
@@ -1,23 +1,16 @@
-# fly.toml app configuration file generated for typingmind-mcp-server on 2025-10-09T17:38:54Z
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
-app = 'typingmind-mcp-server'
-primary_region = 'fra'
-
-[build]
+app = "typingmind-mcp-server"
+primary_region = "fra"
 
 [http_service]
-  internal_port = 8080
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+auto_start_machines = true
+auto_stop_machines = false
+force_https = true
+internal_port = 8080     # matches PORT
+min_machines_running = 1
+processes = [ "app" ]
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 1
-  memory_mb = 256
+cpu_kind = "shared"
+cpus = 1
+memory = "256mb"         # free-tier limit
+memory_mb = 256
