--- a/fly.toml
+++ b/fly.toml
@@ -5,12 +5,12 @@ primary_region = "fra"
 auto_start_machines = true
 auto_stop_machines = false
 force_https = true
-internal_port = 8080     # matches PORT
+internal_port = 8080
 min_machines_running = 1
-processes = [ "app" ]
+processes = ["app"]
 
 [[vm]]
 cpu_kind = "shared"
 cpus = 1
-memory = "256mb"         # free-tier limit
+memory = "256mb"
 memory_mb = 256
